Finalizada mi parte con los html

--- a/Leaderplus.html
+++ b/Leaderplus.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Leader Plus</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
+    <h1>Leader Plus</h1>
+    <hr>
+    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+
+    <div id="imagenes">
+        <img src="img/leaderplus/AcerNXHN2AL.webp" alt="" class="equipo"><p>Acer NXH2AL</p>
+        <img src="img/leaderplus/HPPavilionDv0503.jpg" alt="" class="equipo"><p>HP Pavilion DV0503</p>
+        <img src="img/leaderplus/HuawueiMatebook14.jpeg" alt="" class="equipo"><p>Huawuei Mateboo k14</p>
+        <img src="img/leaderplus/Lenovoe15.webp" alt="" class="equipo"><p>Lenovo E15</p>
+        <img src="img/leaderplus/LenovoIdeapad.jpg" alt="" class="equipo"><p>Lenovo Ideapad</p>
+    </div>
+    <section id="specs"><h2>Especificaciones</h2>
+    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+        <ul>
+            <li>Procesador: Intel Core i5 2.4GHz</li>
+            <li>Disco Duro: 256GB SSD</li>
+            <li>Pantalla: 14'</li>
+            <li>Memoria: 8GB</li>
+        </ul>
+    </section>
 </body>
 </html>
