--- a/Plantilla.html
+++ b/Plantilla.html
@@ -10,7 +10,7 @@
 <body>
     <h1></h1>
     <hr>
-    <p>Descripción de la categoria</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
         <img src="" alt="" class="equipo">
@@ -19,5 +19,14 @@
         <img src="" alt="" class="equipo">
         <img src="" alt="" class="equipo">
     </div>
+    <section id="specs"><h2>Especificaciones</h2>
+    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+        <ul>
+            <li>Procesador: </li>
+            <li>Disco Duro: </li>
+            <li>Pantalla: '</li>
+            <li>Memoria: </li>
+        </ul>
+    </section>
 </body>
 </html>
