--- a/Leadergold.html
+++ b/Leadergold.html
@@ -13,11 +13,21 @@
     <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="img/leadergold/AcerNitro5.webp" alt="" class="equipo">
-        <img src="img/leadergold/DellIns5400.jpg" alt="" class="equipo">
-        <img src="img/leadergold/HPPavilionx360.jpg" alt="" class="equipo">
-        <img src="img/leadergold/MacbookAir.webp" alt="" class="equipo">
-        <img src="img/leadergold/ThinkpadE15.jpg" alt="" class="equipo">
+        <img src="img/leadergold/AcerNitro5.webp" alt="" class="equipo"><p>Acer Nitro 5</p>
+        <img src="img/leadergold/DellIns5400.jpg" alt="" class="equipo"><p>Dell Inspiron 5400</p>
+        <img src="img/leadergold/HPPavilionx360.jpg" alt="" class="equipo"><p>HP Pavilion x360</p>
+        <img src="img/leadergold/MacbookAir.webp" alt="" class="equipo"><p>Macbook Air</p>
+        <img src="img/leadergold/ThinkpadE15.jpg" alt="" class="equipo"><p>Thinkpad E15</p>
     </div>
+    <section id = "specs">
+        <h2>Especificaciones</h2>
+        <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+        <ul>
+            <li>Procesador: Intel Core i5 2.4 GHz</li>
+            <li>Disco Duro: 256GB SSD</li>
+            <li>Pantalla: 15'</li>
+            <li>Memoria: 8GB</li>
+        </ul>
+    </section>
 </body>
 </html>
