--- a/Plantilla.html
+++ b/Plantilla.html
@@ -8,9 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Título</h1>
     <hr>
-    <p>Descripción de la categoria</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet deleniti, harum at soluta id excepturi quas aut, iure consequuntur inventore dolor? Quos perspiciatis veniam ea ex fugit quaerat, laboriosam corporis?
+    Fugiat voluptatem nulla beatae hic voluptate nemo mollitia autem minus id unde, odio repellat adipisci obcaecati eos! Nobis tenetur blanditiis quas quam dolorem tempore quia a exercitationem, obcaecati repudiandae enim.
+    Debitis vero eos consequatur minus ullam magni dignissimos quam sit, corporis nihil, possimus illum pariatur sed laudantium quas tempora recusandae facere esse quaerat? Eaque, eum dicta illum amet minus sit.
+    Cupiditate quos praesentium, saepe sit voluptates libero, at dolor doloribus nulla molestiae quasi, exercitationem voluptatum molestias nemo? Deserunt minus facere eos, maiores nemo, ex dicta dolorum officia aliquam, quia suscipit!
+    Dolorem voluptate error a deserunt nisi neque eaque perspiciatis. Recusandae nisi voluptates impedit enim iste! Ut maiores veritatis nesciunt, corporis dolore minima. Nostrum corrupti enim officia ipsam dolor! Dolore, quia?</p>
+
+    <ul>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+    </ul>
 
     <div id="imagenes">
         <img src="" alt="" class="equipo">
@@ -19,5 +31,8 @@
         <img src="" alt="" class="equipo">
         <img src="" alt="" class="equipo">
     </div>
+
+    <!-- No incluir en el código: -->
+    <script src="index.js"></script>
 </body>
 </html>
