Error de las imágenes y texto arreglado.

--- a/Leadergold.html
+++ b/Leadergold.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,31 @@
     <link rel="stylesheet" href="style.css">
     <title>Leader Gold</title>
 </head>
+
 <body>
     <h1>Leader Gold</h1>
     <hr>
-    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de
+        trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="img/leadergold/AcerNitro5.webp" alt="" class="equipo"><p>Acer Nitro 5</p>
-        <img src="img/leadergold/DellIns5400.jpg" alt="" class="equipo"><p>Dell Inspiron 5400</p>
-        <img src="img/leadergold/HPPavilionx360.jpg" alt="" class="equipo"><p>HP Pavilion x360</p>
-        <img src="img/leadergold/MacbookAir.webp" alt="" class="equipo"><p>Macbook Air</p>
-        <img src="img/leadergold/ThinkpadE15.jpg" alt="" class="equipo"><p>Thinkpad E15</p>
+        <div class="bloque-imagen"><img src="img/leadergold/AcerNitro5.webp" alt="" class="equipo">
+            <p>Acer Nitro 5</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadergold/DellIns5400.jpg" alt="" class="equipo">
+            <p>Dell Inspiron 5400</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadergold/HPPavilionx360.jpg" alt="" class="equipo">
+            <p>HP Pavilion x360</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadergold/MacbookAir.webp" alt="" class="equipo">
+            <p>Macbook Air</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadergold/ThinkpadE15.jpg" alt="" class="equipo">
+            <p>Thinkpad E15</p>
+        </div>
     </div>
-    <section id = "specs">
+    <section id="specs">
         <h2>Especificaciones</h2>
         <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
         <ul>
@@ -30,4 +43,5 @@
         </ul>
     </section>
 </body>
+
 </html>
