--- a/Leaderplus.html
+++ b/Leaderplus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,33 @@
     <link rel="stylesheet" href="style.css">
     <title>Leader Plus</title>
 </head>
+
 <body>
     <h1>Leader Plus</h1>
     <hr>
-    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de
+        trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="img/leaderplus/AcerNXHN2AL.webp" alt="" class="equipo"><p>Acer NXH2AL</p>
-        <img src="img/leaderplus/HPPavilionDv0503.jpg" alt="" class="equipo"><p>HP Pavilion DV0503</p>
-        <img src="img/leaderplus/HuawueiMatebook14.jpeg" alt="" class="equipo"><p>Huawuei Mateboo k14</p>
-        <img src="img/leaderplus/Lenovoe15.webp" alt="" class="equipo"><p>Lenovo E15</p>
-        <img src="img/leaderplus/LenovoIdeapad.jpg" alt="" class="equipo"><p>Lenovo Ideapad</p>
+        <div class="bloque-imagen"><img src="img/leaderplus/AcerNXHN2AL.webp" alt="" class="equipo">
+            <p>Acer NXH2AL</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderplus/HPPavilionDv0503.jpg" alt="" class="equipo">
+            <p>HP Pavilion DV0503</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderplus/HuawueiMatebook14.jpeg" alt="" class="equipo">
+            <p>Huawuei Mateboo k14</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderplus/Lenovoe15.webp" alt="" class="equipo">
+            <p>Lenovo E15</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderplus/LenovoIdeapad.jpg" alt="" class="equipo">
+            <p>Lenovo Ideapad</p>
+        </div>
     </div>
-    <section id="specs"><h2>Especificaciones</h2>
-    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+    <section id="specs">
+        <h2>Especificaciones</h2>
+        <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
         <ul>
             <li>Procesador: Intel Core i5 2.4GHz</li>
             <li>Disco Duro: 256GB SSD</li>
@@ -29,4 +43,5 @@
         </ul>
     </section>
 </body>
+
 </html>
