--- a/Plantilla.html
+++ b/Plantilla.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,33 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Título</h1>
     <hr>
-    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Gold". Esta selección de equipos se ajusta a su carga de
+        trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="" alt="" class="equipo">
-        <img src="" alt="" class="equipo">
-        <img src="" alt="" class="equipo">
-        <img src="" alt="" class="equipo">
-        <img src="" alt="" class="equipo">
+        <div class="bloque-imagen"><img src="" alt="" class="equipo">
+            <p>Nombre del modelo</p>
+        </div>
+        <div class="bloque-imagen"><img src="" alt="" class="equipo">
+            <p>Nombre del modelo</p>
+        </div>
+        <div class="bloque-imagen"><img src="" alt="" class="equipo">
+            <p>Nombre del modelo</p>
+        </div>
+        <div class="bloque-imagen"><img src="" alt="" class="equipo">
+            <p>Nombre del modelo</p>
+        </div>
+        <div class="bloque-imagen"><img src="" alt="" class="equipo">
+            <p>Nombre del modelo</p>
+        </div>
     </div>
-    <section id="specs"><h2>Especificaciones</h2>
-    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+    <section id="specs">
+        <h2>Especificaciones</h2>
+        <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
         <ul>
             <li>Procesador: </li>
             <li>Disco Duro: </li>
@@ -29,4 +43,5 @@
         </ul>
     </section>
 </body>
+
 </html>
