--- a/Leaderpro.html
+++ b/Leaderpro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,33 @@
     <link rel="stylesheet" href="style.css">
     <title>Leader Pro</title>
 </head>
+
 <body>
     <h1>Leader Pro</h1>
     <hr>
-    <p>Usted califica para nuestra selección de equipos "Leader Pro". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Pro". Esta selección de equipos se ajusta a su carga de
+        trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="img/leaderpro/hppavilion14dv0502la.jpg" alt="" class="equipo"><p>HP Pavilion 14DV0502 LA</p>
-        <img src="img/leaderpro/HPpavilionGaming.jpg" alt="" class="equipo"><p>HP Pavilion Gaming</p>
-        <img src="img/leadergold/MacbookAir.webp" alt="" class="equipo"><p>Macbook Air</p>
-        <img src="img/leaderpro/Acer.jpg" alt="" class="equipo"><p>Acer</p>
-        <img src="img/leaderpro/LenovoIdeaPad5.jpg" alt="" class="equipo"><p>Lenovo Idea Pad 5</p>
+        <div class="bloque-imagen"><img src="img/leaderpro/hppavilion14dv0502la.jpg" alt="" class="equipo">
+            <p>HP Pavilion 14DV0502 LA</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderpro/HPpavilionGaming.jpg" alt="" class="equipo">
+            <p>HP Pavilion Gaming</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadergold/MacbookAir.webp" alt="" class="equipo">
+            <p>Macbook Air</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderpro/Acer.jpg" alt="" class="equipo">
+            <p>Acer</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leaderpro/LenovoIdeaPad5.jpg" alt="" class="equipo">
+            <p>Lenovo Idea Pad 5</p>
+        </div>
     </div>
-    <section id="specs"><h2>Especificaciones</h2>
-    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+    <section id="specs">
+        <h2>Especificaciones</h2>
+        <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
         <ul>
             <li>Procesador: Intel Core i5 2.6GHz</li>
             <li>Disco Duro: 512GB SSD</li>
@@ -29,4 +43,5 @@
         </ul>
     </section>
 </body>
+
 </html>
