--- a/Leadersilver.html
+++ b/Leadersilver.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,32 @@
     <link rel="stylesheet" href="style.css">
     <title>Leader Silver</title>
 </head>
+
 <body>
     <h1>Leader Silver</h1>
     <hr>
-    <p>Usted califica para nuestra selección de equipos "Leader Silver". Esta selección de equipos se ajusta a su carga de trabajo dándole el mejor precio para sus equipos</p>
+    <p>Usted califica para nuestra selección de equipos "Leader Silver". Esta selección de equipos se ajusta a su carga
+        de trabajo dándole el mejor precio para sus equipos</p>
 
     <div id="imagenes">
-        <img src="img/leadersilver/Macbookpro.jpg" alt="" class="equipo"><p>Macbook Pro</p>
-        <img src="img/leadersilver/HP Victus.jpg" alt="" class="equipo"><p>HP Victus</p>
-        <img src="img/leadersilver/HP Pavilion All.jpg" alt="" class="equipo"><p>HP Pavilion All in One</p>
-        <img src="img/leadersilver/AsusTUF.jpg" alt="" class="equipo"><p>Asus TUF</p>
-        <img src="img/leadersilver/iMac.jpg" alt="" class="equipo"><p>iMac</p>
+        <div class="bloque-imagen"><img src="img/leadersilver/Macbookpro.jpg" alt="" class="equipo">
+            <p>Macbook Pro</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadersilver/HP Victus.jpg" alt="" class="equipo">
+            <p>HP Victus</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadersilver/HP Pavilion All.jpg" alt="" class="equipo">
+            <p>HP Pavilion All in One</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadersilver/AsusTUF.jpg" alt="" class="equipo">
+            <p>Asus TUF</p>
+        </div>
+        <div class="bloque-imagen"><img src="img/leadersilver/iMac.jpg" alt="" class="equipo">
+            <p>iMac</p>
+        </div>
     </div>
     <section id="specs">Especificaciones
-    <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
+        <p> Las siguientes son especificaciones mínimas sugeridas para su selección:</p>
         <ul>
             <li>Procesador: Intel Core i7 </li>
             <li>Disco Duro: 512GB SSD</li>
@@ -29,4 +42,5 @@
         </ul>
     </section>
 </body>
+
 </html>
